assets/styles/style.css
:root {
	--light-color: #f1faee;
	--dark-color: #3d405b;
	--margin-bottom: 9rem;
}

* {
	margin: 0;
	box-sizing: border-box;
}

html {
	width: 100%;
	scroll-behavior: smooth;
}

body {
	background-color: #f1faee;
	display: flex;
	flex-direction: column;
	overflow: auto;
}

::-webkit-scrollbar {
	width: 0.8em;
}

::-webkit-scrollbar-track {
	border-radius: 100vw;
	margin-block: 0.25em;
}

::-webkit-scrollbar-thumb {
	background: rgba(61, 64, 91, 0.75);
	border: 0.2em solid var(--dark-color);
	border-radius: 100vw;
}

::-webkit-scrollbar-thumb:hover {
	background: rgba(61, 64, 91, 0.95);
}

header {
	background-color: #f1faee;
	position: sticky;
	top: 0;
	left: 0;
	width: 100%;
	padding: 0 1rem;
	z-index: 1;
}

.header-container {
	height: 100px;
	padding: 0 1rem;
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.header-name {
	text-decoration: none;
}

.name {
	font-family: 'Nunito', sans-serif;
	font-size: 24px;
	font-weight: 800;
	color: var(--dark-color);
}

.portfolio-icon:hover {
	transform: scale(1.01);
}

.nav-toggle {
	display: none;
}

.hamburger-icon {
	display: none;
}

.main-container {
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.home-contact {
	display: flex;
	align-content: center;
	padding: 0;
}

li {
	width: auto;
	display: flex;
}

.nav-buttons {
	width: 7rem;
	margin: 0.2rem;
	padding: 0.8rem 1rem;
	color: var(--dark-color);
	background-color: var(--light-color);
	font-family: 'Nunito', sans-serif;
	font-size: 16px;
	font-weight: 700;
	text-align: center;
	text-decoration: none;
	border: none;
	border-radius: 25px;
}

.nav-buttons:hover {
	background-color: #f2cc8f;
	color: var(--light-color);
	box-shadow: rgba(61, 64, 91, 0.2) 0 2px 6px;
}

.mail {
	padding-left: 2rem;
}

.button-mail {
	width: 8.5rem;
	padding: 0.8rem 1rem;
	background-color: #81b29a;
	border: none;
	border-radius: 25px;
	box-shadow: rgba(61, 64, 91, 0.2) 0 1px 3px;
}

.button-mail:hover {
	box-shadow: rgba(61, 64, 91, 0.2) 0 2px 6px;
}

.href-mail {
	color: var(--dark-color);
	font-family: 'Nunito', sans-serif;
	font-size: 16px;
	font-weight: 700;
	text-align: center;
	text-decoration: none;
}

.href-mail:hover {
	color: var(--light-color);
}

hr {
	border: 1px solid var(--dark-color);
}

.page-container {
	position: relative;
	min-height: 100%;
}

.content-wrap {
	display: flex;
	flex-direction: column;
	align-items: center;
	padding-bottom: 8rem;
}

.hero {
	display: flex;
	align-items: center;
	justify-content: space-between;
	gap: 2.5rem;
	max-width: 54rem;
	margin: 5rem 0;
	background-color: rgba(129, 178, 154, 1);
	border-radius: 15px;
	box-shadow: rgba(61, 64, 91, 0.76) 0 2px 6px;
	scroll-margin-top: 10rem;
}

.hero-img {
	height: 27rem;
	width: 27rem;
	border-radius: 15px 0 0 15px;
}

.bio {
	width: 24.5rem;
	padding: 0.625rem;
	font-family: 'Open Sans', sans-serif;
	color: var(--dark-color);
	background-color: #f1faee;
	border-radius: 5px 0 0 5px;
	box-shadow: rgba(61, 64, 91, 0.76) 0 3px 6px;
}

.bio h2 {
	margin-left: 0.5rem;
}

.bio p {
	line-height: 2rem;
	margin-left: 1.5rem;
	padding: 0.8rem 0;
}

.href-contact {
	color: var(--dark-color);
	font-weight: 700;
	text-decoration: none;
}

.href-contact:hover {
	color: #f2cc8f;
}

.title-icon {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.coffee-icon {
	width: 64px;
	height: 64px;
	margin-right: 0.5rem;
}

.more-about {
	gap: 2.5rem;
	max-width: 85rem;
	margin-bottom: var(--margin-bottom);
	padding: 2rem;
	font-family: 'Open Sans', sans-serif;
	color: var(--dark-color);
	background-color: rgba(129, 178, 154, 0.75);
	border-radius: 15px;
	box-shadow: rgba(61, 64, 91, 0.76) 0 2px 6px;
}

.more-about h2 {
	text-align: center;
	margin: 2rem;
}

.more-about p {
	text-align: center;
	line-height: 2rem;
	margin-left: 1.5rem;
	padding: 0.8rem 0;
}

.cv-container {
	display: flex;
	justify-content: end;
}

.button-cv {
	width: 16rem;
	height: 4rem;
	padding: 0.8rem 1rem;
	background-color: #81b29a;
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	border: none;
	border-radius: 25px;
	box-shadow: var(--dark-color) 0 1px 3px;
}

.button-cv:hover {
	background-color: var(--dark-color);
	font-family: 'Open Sans', sans-serif;
	box-shadow: var(--dark-color) 0 2px 5px;
}

.cv {
	text-decoration: none;
}

p.cv-text {
	padding: 0;
	margin: 0;
	color: var(--light-color);
	font-family: 'Open Sans', sans-serif;
	font-size: 18px;
	font-weight: 600;
	display: flex;
	align-items: center;
}

.cv-icon {
	width: 2rem;
	margin-left: 1rem;
}

#skills {
	gap: 2.5rem;
	max-width: 85rem;
	margin-bottom: var(--margin-bottom);
	font-family: 'Open Sans', sans-serif;
	color: var(--dark-color);
	border-radius: 15px;
	scroll-margin-top: 11rem;
}

#skills h2 {
	text-align: center;
	margin-bottom: 4rem;
}

canvas {
	width: 60rem;
	height: 30rem;
	background-color: #9888A5;
	border-radius: 15px;
	box-shadow: rgba(61, 64, 91, 0.76) 0 2px 6px;
}

.circles {
	display: none;
}

#projects {
	width: 90vw;
	padding: 2rem;
	margin-bottom: var(--margin-bottom);
	color: var(--dark-color);
	font-family: 'Open Sans', sans-serif;
	display: flex;
	flex-direction: column;
	justify-items: center;
	align-items: center;
	scroll-margin-top: 9rem;
}

.projects-container {
	max-width: 100rem;
	display: flex;
	flex-wrap: wrap;
	align-content: center;
	justify-content: center;
	text-align: center;
	border-radius: 15px;
}

.project-pic {
	width: auto;
	max-height: 12rem;
	border-radius: 15px;
	margin-top: 1rem;
	box-shadow: rgba(61, 64, 91, 0.76) 0 2px 6px;
}

.projects-title {
	text-align: center;
	margin-bottom: 4rem;
}

.project-container p {
	padding: 0.8rem;
}

.project-title {
	font-size: 22px;
	margin: 2rem;
}

.project-details {
	margin: 1rem;
}

.project-card {
	width: 28rem;
	background-color: #f2cc8f;
	border-radius: 11px;
	padding: 2rem;
	margin: 1.5rem;
	box-shadow: rgba(61, 64, 91, 0.76) 0 2px 6px;
}
/* ... */

